[package]
name = "dechat-rs"
version = "0.2.0"
edition = "2021"
description = "Debounce / de-chattering utility for key input devices"
authors = ["night-crawler"]
license = "MIT"
readme = "README.md"

[dependencies]
env_logger = "0.11"
evdev = { git = "https://github.com/emberian/evdev", rev = "8feea0685b0acb8153e394ffc393cf560d30a16f" }
anyhow = "1"
log = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
colored = { version = "2" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
